--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Glint</title>
+    <title>Paula</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -107,10 +107,10 @@
 
             <div class="row home-content__main">
 
-                <h3>Welcome to Glint</h3>
+                <h3>Welcome to my page</h3>
 
                 <h1>
-                    We are a creative group <br>
+                    Paula Ruiz <br>
                     of people who design <br>
                     influential brands and <br>
                     digital experiences.
