--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 
                 <h1>
                     Paula Ruiz <br>
-                    of people who design <br>
-                    influential brands and <br>
+                    <br>
+                    3D and concept artist student <br>
                     digital experiences.
                 </h1>
 
@@ -166,8 +166,8 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead subhead--dark">Hello There</h3>
-                <h1 class="display-1 display-1--light">We Are Glint</h1>
+                <h3 class="subhead subhead--dark">About me</h3>
+                <h1 class="display-1 display-1--light">Paula Ruiz</h1>
             </div>
         </div> <!-- end section-header -->
 
