--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
                     Paula Ruiz <br>
                     <br>
                     3D and concept artist student <br>
-                    digital experiences.
+                    
                 </h1>
 
                 <div class="home-content__buttons">
                     <a href="#contact" class="smoothscroll btn btn--stroke">
-                        Start a Project
+                        Social Media
                     </a>
                     <a href="#about" class="smoothscroll btn btn--stroke">
-                        More About Us
+                        More About Me
                     </a>
                 </div>
 
